--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,19 +9,19 @@ on:
 jobs:
   test:
     name: ${{ matrix.redmine }} on ${{ matrix.ruby }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
         include:
           - ruby: "3.1"
-            redmine: "5.0.2"
+            redmine: "5.0.3"
           - ruby: "3.0"
-            redmine: "5.0.2"
+            redmine: "5.0.3"
           - ruby: "2.7"
-            redmine: "4.2.7"
-          - ruby: "2.6"
-            redmine: "4.1.7"
+            redmine: "5.0.3"
+          - ruby: "2.7"
+            redmine: "4.2.8"
       fail-fast: false
 
     env:
@@ -47,16 +47,16 @@ jobs:
         uses: actions/cache@v3
         with:
           path: vendor
-          key: v3-ruby-${{ matrix.ruby }}-redmine-${{ matrix.redmine }}
+          key: v5-ruby-${{ matrix.ruby }}-redmine-${{ matrix.redmine }}
 
       - name: setup redmine ${{ matrix.redmine }}
         run: ./redmine update
 
       - name: run tests
-        run: ./redmine exec bundle exec rspec --color
+        run: ./redmine exec bundle exec rspec --color --format doc
 
   rubocop:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     env:
       BUNDLE_JOBS: 4
